# codeglance

./: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add_detector.yml  bug_report.yml
.github/workflows/: ci.yml
docs/: blog-post.md  codebase-tour.md  launch-checklist.md  launch-plan.md  self-review.md  social-copy.md  strategy.md
docs/examples/: charmbracelet-glow.txt  edge-deployer-output.txt  expressjs-express.txt  fastapi-for-ai.md  fastapi-template.txt  go-gin-for-ai.md  limit-order-book-output.txt  nextjs-for-ai.md  openlake-output.txt  pallets-flask.txt
scripts/: gen-screenshot.mjs
src/: analyzer.ts  index.ts  scanner.ts
src/detectors/: entrypoints.ts  frameworks.ts  git.ts  languages.ts  scripts.ts  starthere.ts  tools.ts
src/renderers/: forai.ts  markdown.ts  terminal.ts
tests/core/: frameworks.test.ts  json_output.test.ts  languages.test.ts  scripts.test.ts  starthere.test.ts  tools.test.ts
tests/fixtures/cpp-project/: CMakeLists.txt  Makefile
tests/fixtures/cpp-project/.github/workflows/: ci.yml
tests/fixtures/cpp-project/include/: app.h  config.h
tests/fixtures/cpp-project/src/: app.cpp  config.cpp  main.cpp
tests/fixtures/cpp-project/tests/: test_app.cpp
tests/fixtures/go-project/: Dockerfile  (+2 more)
tests/fixtures/rust-project/: Cargo.toml
tests/fixtures/rust-project/.github/workflows/: ci.yml
tests/fixtures/rust-project/src/: cli.rs  config.rs  main.rs
(+23 files in other folders)
