[package]
name = "myservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
